Submited changes from upstream to Mini.

--- a/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
+++ b/S5 - Extraer, transformar y cargar datos/S5.TU3/TUTORIAL - Extraer, transformar y cargar datos.ipynb
@@ -97,37 +97,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Intitializing PySpark ..."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/07/10 21:30:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "Spark Web UI available at http://alejoman-pc:4040\n",
-       "SparkContext available as 'sc' (version = 3.3.0, master = local[*], app id = local-1657506626742)\n",
-       "SparkSession available as 'spark'\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22/07/10 21:30:27 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "22/08/02 04:13:41 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -148,7 +129,7 @@
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>pyspark-shell</code></dd>\n",
+       "                <dd><code>Instancia_Tutorial_PySpark</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -156,7 +137,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession object at 0x7f1ce86a5be0>"
+       "<pyspark.sql.session.SparkSession at 0x7f909d0779d0>"
       ]
      },
      "execution_count": 1,
@@ -337,16 +318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['Programa_1', 2000, 4500, 'LAN'], ['Programa_2', 3401, 7000, 'LAS'], ['Programa_3', 50, 7000, 'LAS'], ['Programa_4', 7850, 3300, 'USW'], ['Programa_5', 8000, 3505, 'LAN']]"
+       "[['Programa_1', 2000, 4500, 'LAN'],\n",
+       " ['Programa_2', 3401, 7000, 'LAS'],\n",
+       " ['Programa_3', 50, 7000, 'LAS'],\n",
+       " ['Programa_4', 7850, 3300, 'USW'],\n",
+       " ['Programa_5', 8000, 3505, 'LAN']]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +351,7 @@
        "[9000000, 23807000, 350000, 25905000, 28040000]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similar a los `DataFrame` de `pandas`, los `DataFrame` en `pyspark` son una colección mutable de datos organizados por columnas. A diferencia de `pandas`, que opera de manera secuencial, la implementación de `pyspark` almacena los datos de manera distribuida y opera sobre ellos de manera paralelizada. "
+    "Similar a los `DataFrame` de `pandas`, los `DataFrame` en `pyspark` son una colección mutable de datos organizados por columnas. A diferencia de `pandas`, que opera de manera secuencial, la implementación de `pyspark` almacena las filas de manera distribuida y opera sobre ellas de manera paralelizada. "
    ]
   },
   {
@@ -412,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +406,7 @@
        "DataFrame[Nombre: string, Descargas: bigint, Lineas_de_codigo: bigint, Region: string]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,19 +421,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El parámetro `schema` (esquema) hace referencia a los campos de una estructura de datos. En el caso de nuestra lista de listas, el esquema es el nombre de las columnas. Si tuvieramos un diccionario, el esquema serían sus llaves."
+    "El parámetro `schema` (esquema) hace referencia a los campos de una estructura de datos. En el caso de nuestra lista de listas, el esquema es el nombre de las columnas. Si tuvieramos un diccionario de listas, el esquema serían sus llaves."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pyspark` incluye métodos dedicados a cargar datos desde una gran variedad de formatos. Consideremos por lo pronto unos formatos con los que estemos familiarizados."
+    "`pyspark` incluye métodos dedicados a cargar datos desde una gran variedad de formatos. Consideremos, por lo pronto, un format con el que estemos familiarizados."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -477,24 +462,251 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Operaciones y consulta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tenemos distintas alternativas para consultar el contenido de nuestros `DataFrame`. Podemos utilizar el método `show` para imprimir de manera estilizada la tabla o los métodos `head` y `tail` para retornar las primeras o últimas filas de la tabla."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+----------------+------+\n",
+      "|    Nombre|Descargas|Lineas_de_codigo|Region|\n",
+      "+----------+---------+----------------+------+\n",
+      "|Programa_1|     2000|            4500|   LAN|\n",
+      "|Programa_2|     3401|            7000|   LAS|\n",
+      "|Programa_3|       50|            7000|   LAS|\n",
+      "|Programa_4|     7850|            3300|   USW|\n",
+      "|Programa_5|     8000|            3505|   LAN|\n",
+      "+----------+---------+----------------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DataFrame[id: string, medios_noti_redessociales: string, medios_noti_chat: string, medios_noti_periodicos: string, medios_noti_tv: string, medios_noti_radio: string, medios_covid_redessociales: string, medios_covid_chat: string, medios_covid_periodicos: string, medios_covid_tv: string, medios_covid_radio: string]"
+       "[Row(Nombre='Programa_1', Descargas=2000, Lineas_de_codigo=4500, Region='LAN'),\n",
+       " Row(Nombre='Programa_2', Descargas=3401, Lineas_de_codigo=7000, Region='LAS'),\n",
+       " Row(Nombre='Programa_3', Descargas=50, Lineas_de_codigo=7000, Region='LAS')]"
       ]
      },
+     "execution_count": 32,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from IPython.display import display\n",
-    "display(df_covid_19)"
+    "df.head(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(Nombre='Programa_4', Descargas=7850, Lineas_de_codigo=3300, Region='USW'),\n",
+       " Row(Nombre='Programa_5', Descargas=8000, Lineas_de_codigo=3505, Region='LAN')]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cabe notar que por medio de los métodos `head` y `tail`, obtenemos objetos de tipo `Row` que son los que ditribuye Spark para paralelizar las operaciones. El método `limit` nos permite persitir el tipo `DataFrame` como resultado de la consulta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+----------------+------+\n",
+      "|    Nombre|Descargas|Lineas_de_codigo|Region|\n",
+      "+----------+---------+----------------+------+\n",
+      "|Programa_1|     2000|            4500|   LAN|\n",
+      "|Programa_2|     3401|            7000|   LAS|\n",
+      "|Programa_3|       50|            7000|   LAS|\n",
+      "+----------+---------+----------------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.limit(3).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En ocasiones puede ser deseable convertir entre los `DataFrame` de `pyspark` a su contraparte de `pandas`. Transformar un `DataFrame` de `pyspark` a `pandas` es solo recomendable si se cuenta con suficiente almacenamiento o memoria. Los altos volúmenes de datos que manejamos en `pyspark` con gran eficiencia en memoria y procesamiento pueden no ser compatibles con otras librerías."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "withColumn() missing 1 required positional argument: 'col'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [39]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwithColumn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mDescargas\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: withColumn() missing 1 required positional argument: 'col'"
+     ]
+    }
+   ],
+   "source": [
+    "df."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Descargas</th>\n",
+       "      <th>Lineas_de_codigo</th>\n",
+       "      <th>Region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Programa_1</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>LAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Programa_2</td>\n",
+       "      <td>3401</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>LAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Programa_3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>LAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Programa_4</td>\n",
+       "      <td>7850</td>\n",
+       "      <td>3300</td>\n",
+       "      <td>USW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Programa_5</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>3505</td>\n",
+       "      <td>LAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Nombre  Descargas  Lineas_de_codigo Region\n",
+       "0  Programa_1       2000              4500    LAN\n",
+       "1  Programa_2       3401              7000    LAS\n",
+       "2  Programa_3         50              7000    LAS\n",
+       "3  Programa_4       7850              3300    USW\n",
+       "4  Programa_5       8000              3505    LAN"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pandas_df = df.toPandas()\n",
+    "pandas_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
