Submited changes from upstream to Mini.

--- a/S1 - Bienvenida, estructuras de datos y de control/S1.LE1/LECTURA - Programacion en analitica de datos.ipynb
+++ b/S1 - Bienvenida, estructuras de datos y de control/S1.LE1/LECTURA - Programacion en analitica de datos.ipynb
@@ -42,21 +42,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La respuesta corta es que en la actualidad dependemos inmensamente de las máquinas y la programación es un lenguaje para comunicarnos con ellas."
+    "La respuesta corta es que dependemos cada vez más de las máquinas (ej., *Smart-Grid*, vehículos autónomos, Industria 5.0, etc.) y la programación es un lenguaje para comunicarnos con ellas."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En general, los datos que nos interesa analizar son numerosos y los métodos que utilizamos para analizarlos implican operaciones repetitivas, a veces complejas, sobre ellos. Por esto, buena parte de lo que se hace en análisis de datos es hecho por un computador, desde recolectar y preparar los datos, hasta entrenar modelos sofisticados para analizarlos. Existen librerías especializadas que nos ayudan a llevar a cabo estas tareas (sin que seamos desarrolladores expertos), pero poner esas librerías al servicio de proyectos de analítica de datos implica un nivel de programación o *scripting* básico, justamente para unir las piezas de código técnico de una forma que permitan responder a las necesidades y preguntas de negocio que plantee una organización. Esta tarea de integrar procesos técnicos de forma coherente con el problema que se busca resolver es una parte crucial del quehacer de un profesional en analítica de datos (como veremos en la siguente sección); delegar esa función sería perder una ventaja competitiva profesional, porque quien lo hace es quien tiene la visión panorámica del proyecto."
+    "En general, los datos que nos interesa analizar son numerosos y los métodos que utilizamos para analizarlos implican operaciones repetitivas, a veces complejas, sobre ellos. Por esto, buena parte de lo que se hace en análisis de datos es hecho por un computador, desde la aplicación de procedimientos para preparar los datos hasta entrenar modelos sofisticados para analizarlos. Existen librerías especializadas que nos ayudan a llevar a cabo estas tareas, pero se requiere un nivel de programación o *scripting* básico para poner esas funcionalidades al servicio de un proyecto de analítica de datos para responder a una necesidad de una organización. Esta tarea de integrar procesos técnicos de forma coherente con el problema que se busca resolver es una parte crucial del quehacer de un profesional en analítica de datos (como veremos en la siguente sección), y constituye una ventaja competitiva profesional, porque quien lo hace es quien tiene la visión panorámica del proyecto."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una dificultad común en el aprendizaje de la programación es que a veces las personas creen que la programación se trata de memorizar comandos. Algo así como recitar que `ctrl`+`c` es copiar y `ctrl`+`v` es pegar de forma más elaborada. Esa es una visión bastante aburrida de la programación: una receta segura para detestarla. Es más interesante pensar que la programación es un lenguaje (por eso hablamos de lenguajes de programación), una forma de expresión; incluso podemos programar música y artes visuales con código. Son lenguajes, de hecho, muy simplificados respecto a los que hablamos las personas, porque interesa que sean fáciles de aprender y porque buscan que logremos traducir nuestras ideas sobre un problema, a unos pasos concretos articulados lógicamente, de forma que los pueda entender una computadora y los ejecute por nosotros (sobre todo cuando son difíciles y repetitivos). Con esto, podemos llevar el tipo de inteligencia que tenemos los humanos (esa que es compleja, desestructurada y nos hace creativos para resolver problemas) con la inteligencia artificial principalmente operativa de los computadores, que es rápida y precisa. La programación nos permite agregarle un enorme poder de cómputo a nuestras mejores estrategias para resolver problemas."
+    "Una concepción errada sobre la programación es que se trata de memorizar comandos, lo cual puede ser una receta segura para que su aprendizaje sea tedioso. Es más interesante pensar en la programación como el proceso de entender un problema y reducirlo a una serie de pasos lógicos que podemos \"delegar\" a una máquina. Para esto, utilizamos lenguajes muy simplificados respecto a los que hablamos las personas, porque interesa que sean fáciles de aprender y usar de manera general. Así, podemos combinar el tipo de inteligencia que tenemos los humanos (esa que es compleja, desestructurada y nos hace creativos para resolver problemas) con la inteligencia operativa de los computadores, que es rápida y precisa para procesos complejos y repetitivos. La programación nos permite agregarle un enorme poder de cómputo a nuestras mejores estrategias para resolver problemas."
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En consecuencia, la programación es el medio para poner la computación al servicio de la toma de decisiones. Requiere que aprendamos a expresar nuestras ideas en un lenguaje simple. Una frase que uso frecuentemente, aunque no recuerdo su autor, dice que “si no puedes explicarle al computador lo que tienes en mente, tal vez no lo tienes tan claro”, similar a la del físico Richard Feynman, que decía que “si no se lo puedes explicar a un niño, realmente no lo entiendes”. Esta es la razón por la cual en la siguiente sección insisto en que el problema de programación se resuelve antes de escribir la primera línea de código: un buen esquema gráfico del problema o un buen diagrama de flujo pueden ahorrar horas y hasta días de frustración con un problema de programación (como veremos en una lectura siguiente)."
+    "En consecuencia, la programación es el medio para poner la computación al servicio de la toma de decisiones. Requiere que aprendamos a expresar nuestras ideas en un lenguaje simple. “Si no puedes explicarle al computador lo que tienes en mente, tal vez no lo tienes tan claro” es una frase popular entre programadores, similar a la del físico Richard Feynman: “si no se lo puedes explicar a un niño, realmente no lo entiendes”. La siguiente sección enfatiza que un buen programador resuelve el problema antes de escribir la primera línea de código: un buen esquema gráfico del problema o un buen diagrama de flujo pueden ahorrar horas y hasta días de frustración con un problema de programación."
    ]
   },
   {
@@ -112,28 +112,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El primer nivel tiene que ver con estructurar el problema, aún lejos de pensar en computadores. Se trata de caracterizar el estado actual de un sistema o problema, identificar un estado deseado y una forma de llegar a él con base en la información y recursos disponibles. De hecho, pensando en términos de un proceso de diseño, podemos empezar por preguntar por qué la situación actual es un problema, pues tal vez exista una respuesta que conduzca a una solución no relacionada con programación. Esto no es trivial, pero normalmente conduce a tener clara la lógica del problema de forma que se pueda proceder a programarlo."
+    "El primer nivel tiene que ver con estructurar el problema, aún lejos de pensar en computadores. Se trata de entender el estado actual de un sistema o problema, identificar un estado deseado y una forma de llegar a él con base en la información y recursos disponibles. Incluso, es útil preguntar por qué la situación actual es un problema, pues tal vez exista una respuesta que conduzca a una solución no relacionada con programación. Esto no es trivial, pero contribuye a tener clara la lógica del problema de forma que se pueda proceder a programarlo."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El segundo nivel es lo más cercano a la palabra programar: se trata de establecer un proceso y unos flujos de información que, puestos en pasos lógicos, permitan resolver el problema. Este es el núcleo principal en la solución del problema y, curiosamente, no requiere ser expresado en sintaxis de ningún lenguaje de programación. Es más, se puede prescindir del computador. Como anécdota, los problemas de programación más difíciles que enfrenté durante el doctorado los resolvía en mis prácticas de natación. Antes de pensar en código, lo más importante es ordenar mentalmente la información y procesos que nos interesan. De esta forma, basta con un pseudo-algoritmo o diagrama de flujo escrito en papel con los pasos para resolver el problema. Con ese diagrama, ya se puede decir que tenemos una solución y solo falta ponerla en código, incluso sub-contratando a alguien para implementar el código, si es el caso."
+    "El segundo nivel es lo más cercano a la palabra programar: se trata de establecer un proceso y unos flujos de información que, puestos en pasos lógicos, permitan resolver el problema. Este es el núcleo principal en la solución del problema y no necesariamente requiere ser expresado en sintaxis de ningún lenguaje de programación. Basta con un pseudo-algoritmo o diagrama de flujo escrito en papel con los pasos para resolver el problema, cuya implementación en código puede incluso sub-contratarse, si es el caso."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El último nivel es justamente codificar, que es lo que seguramente muchos imaginan cuando se habla de programación: escribir palabras especiales de colores diferentes en una pantalla. Es un paso muy importante porque su implementación determina características fundamentales de la solución, por ejemplo: si el programa es eficiente, escalable, seguro, entre otras, ya que un mismo programa (i.e., un mismo diagrama de flujo) admite diferentes implementaciones en código, incluso en diferentes lenguajes. Es importante entender las implicaciones de la implementación en código, pero no son el foco principal del trabajo en análisis de datos."
+    "El último nivel es justamente codificar; algo más cercano al estereotipo de escribir palabras especiales de colores en una pantalla negra. Es un paso muy importante porque su implementación determina características fundamentales de la solución, por ejemplo: si el programa es eficiente, escalable, seguro, entre otras, pues un mismo programa (i.e., un mismo diagrama de flujo) admite diferentes implementaciones en código. Es importante entender las implicaciones de la implementación en código, pero no son el foco principal del trabajo en análisis de datos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pensar la programación en esos tres niveles es importante, porque una conceptualización errada del problema seguramente va a hacer que la implementación del código sea ineficiente y frustrante. Abusando del inglés, en el nivel superior nos preocupamos por *doing the right thing* (hacer aquello que es correcto hacer) mientras que en el inferior nos aseguramos de estar *doing the thing right* (hacer la cosa correctamente). Resolver problemas en el contexto de análisis de datos va desde una visión estratégica y de alto nivel organizacional, hasta la definición de instrucciones precisas que pueda seguir una máquina. El reto del programador es justamente conectar ambos mundos, por eso uso la palabra programar para el nivel de la mitad, porque logra traducir una necesidad de negocio en especificaciones técnicas de lo que debe hacer un programa computacional."
+    "Pensar la programación en esos tres niveles es importante, porque una conceptualización errada del problema seguramente va a hacer que la implementación del código sea ineficiente y frustrante. Usando un juego de palabras que funciona bien en inglés: en el nivel superior nos preocupamos por estar *doing the right thing* (hacer aquello que es correcto hacer) mientras que en el inferior nos aseguramos de estar *doing the thing right* (hacer la cosa correctamente). Resolver problemas en el contexto de análisis de datos va desde una visión estratégica y de alto nivel organizacional, hasta la definición de instrucciones precisas que pueda seguir una máquina. El reto del programador es justamente conectar ambos mundos: traducir una necesidad de negocio en especificaciones técnicas de lo que debe hacer un programa computacional."
    ]
   },
   {
@@ -147,21 +147,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ya sabemos que la programación es ineludible y que conceptualizar previamente la solución nos ayuda a expresar a un computador nuestras ideas para resolver un problema, incrementando enormemente nuestra capacidad de análisis para la toma de decisiones. Sin embargo, no todos buscan relacionarse con ella al mismo nivel. Esta sección discute cómo se aborda la programación desde diferentes roles en análisis de datos. ¿Qué tanta programación necesito para desenvolverme en el contexto de análisis de datos según mi perfil? "
+    "Ya sabemos que la programación es ineludible y que conceptualizar previamente la solución nos ayuda a expresar a un computador nuestras ideas para resolver un problema, incrementando enormemente nuestra capacidad de análisis para la toma de decisiones. Sin embargo, no todos buscan relacionarse con la programación al mismo nivel. Esta sección discute cómo se aborda la programación desde diferentes roles en análisis de datos. ¿Qué tanta programación necesito para desenvolverme en el contexto de análisis de datos según mi perfil? "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A nivel gerencial, la respuesta corta es: no tanta como la que requiere un desarrollador o analista, porque seguramente habrá alguien especializado en eso en tu equipo, ni tan poca que no puedas comunicarte y liderar equipos involucrados en implementaciones computacionales."
+    "A nivel gerencial, la respuesta corta es: no tanta como la que requiere un desarrollador o analista (porque seguramente habrá alguien especializado en tu equipo), ni tan poca que no puedas comunicarte y liderar equipos involucrados en implementaciones computacionales."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A nivel de analista, la respuesta varía un poco: no necesitas tanta programación como quienes desarrollan las librerías, algoritmos y plataformas especializadas, pero sí se requiere un dominio considerable porque la labor del analista es altamente exploratoria. Las ideas vienen de manipular los datos, mezclarlos, reorganizarlos, visualizarlos, intentar diferentes modelos sobre ellos; no podrás hacer análisis autónomamente si necesitas a alguien más para esto. Es como tratar de cocinar pero que sea otra persona la que va probando la sazón."
+    "A nivel de analista, la respuesta varía un poco: no necesitas tanta programación como quienes desarrollan las librerías, algoritmos y plataformas especializadas, pero sí se requiere un nivel de *scripting* y un dominio considerable de los paquetes apropiados, porque la labor del analista es altamente exploratoria. Las ideas de soluciones por lo general vienen de manipular los datos, mezclarlos, reorganizarlos, visualizarlos, intentar diferentes modelos sobre ellos. No podrás hacer análisis autónomamente si necesitas a alguien más para esto, pues sería como tratar de cocinar y que sea otra persona la que va probando la sazón."
    ]
   },
   {
@@ -169,13 +169,6 @@
    "metadata": {},
    "source": [
     "Por último, la programación fuerte, esa que está debajo del capó, solo se necesita si se quiere desarrollar o especializar métodos de solución, ya sea en investigación o como parte de un equipo de soporte de *software* o infraestructura. Parafraseando una analogía que usa la jefe de *Decision Intelligence* de Google, Cassie Kozyrkov: “así como podemos usar un horno microondas, aunque no lo sepamos diseñar, podemos resolver problemas de análisis de datos sin que sepamos implementar los métodos desde cero; basta con saberlos usar bien. Otro asunto sería dedicarse a diseñar hornos microondas, en cuyo caso sí sería indispensable una habilidad técnica profunda”."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "En general, esa es la premisa que adoptamos en la maestría, haciendo énfasis en \"saberlos usar bien” y teniendo en cuenta que usarlos bien requiere un nivel importante de entendimiento teórico y de programación. Por ejemplo, un proyecto típico de analítica de datos implica recolectar y preparar datos, aplicar una serie de operaciones, modelos, pruebas, etc., los cuales necesariamente requieren implementaciones computacionales."
    ]
   },
   {
@@ -218,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
